# sciurus17_ros_kamba

devel/: .catkin  setup.sh
devel/include/sciurus17_msgs/: ServoParameterConfig.h
devel/include/yolact_ros/: Segment.h  SegmentationActionGoal.h  SegmentationFeedback.h
devel/lib/pkgconfig/: cv_bridge.pc  image_geometry.pc  opencv_tests.pc  realsense2_camera.pc  realsense2_description.pc  roboticsgroup_gazebo_plugins.pc  sciurus17_bringup.pc  sciurus17_control.pc  sciurus17_description.pc  sciurus17_examples.pc  sciurus17_gazebo.pc  sciurus17_moveit_config.pc  sciurus17_msgs.pc  sciurus17_tools.pc  (+2 more)
src/mediapipe-python-sample/: sample_pose.py
src/yolact_ros/: .gitignore  README.md
src/yolact_ros/yolact_ros/: CMakeLists.txt
src/yolact_ros/yolact_ros/action/: Segmentation.action
src/yolact_ros/yolact_ros/launch/: mapping_demo.launch  yolact_ros.launch
src/yolact_ros/yolact_ros/msg/: Segment.msg  Segments.msg
src/yolact_ros/yolact_ros/scripts/: yolact_detection_movie.py  yolact_object_detector.py  yolact_object_detector_node.py
src/yolact_ros/yolact_ros/scripts/modules/: backbone.py  yolact.py
src/yolact_ros/yolact_ros/scripts/modules/data/: __init__.py  config.py
src/yolact_ros/yolact_ros/scripts/modules/layers/: __init__.py  box_utils.py  interpolate.py  output_utils.py
src/yolact_ros/yolact_ros/scripts/modules/layers/functions/: detection.py
src/yolact_ros/yolact_ros/scripts/modules/layers/loss/: multibox_loss.py
src/yolact_ros/yolact_ros/scripts/modules/utils/: __init__.py  augmentations.py  cython_nms.pyx  functions.py  timer.py
(+115 files in other folders)
